# MyCrewAi

./: .gitignore  README.md
book_writer/: README.md  pyproject.toml  requirements.txt
book_writer/src/book_writer/: crew.py  main.py
book_writer/src/book_writer/config/: agents.yaml  tasks.yaml
book_writer/src/book_writer/utils/: book_converter.py
coder/: README.md  pyproject.toml
coder/src/coder/: crew.py  main.py
coder/src/coder/config/: agents.yaml  tasks.yaml
debate/: README.md  pyproject.toml
debate/@2output/: decide.md  oppose.md  propose.md
debate/@@output/: decide.md  oppose.md  propose.md
debate/@output/: decide.md  oppose.md  propose.md
debate/@outputAiCode/: decide.md  oppose.md  propose.md
debate/src/debate/: crew.py  main.py
debate/src/debate/config/: agents.yaml
engineering_team/: pyproject.toml
engineering_team/@@output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
engineering_team/src/engineering_team/: crew.py  main.py
engineering_team/src/engineering_team/config/: agents.yaml  tasks.yaml
financial_researcher/: pyproject.toml
financial_researcher/src/financial_researcher/: crew.py  main.py
financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
researcher/: README.md  pyproject.toml  report.md
researcher/src/researcher/: main.py
stock_picker/: pyproject.toml
stock_picker/knowledge/: user_preference.txt
stock_picker/memory/: long_term_memory_storage.db
stock_picker/src/stock_picker/: crew.py  main.py
stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
(+1 files in other folders)
